Some work on HomePage

--- a/HomePage.html
+++ b/HomePage.html
@@ -22,6 +22,28 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 <li><a href="CheckoutPage.html">Checkout Page</a></li>
 </ul>
 </nav>
+
+
+<section class="banner-area">
+    <h1>Welcome to Luigi's Pizza</h1>
+    <p>...Sample Mission Statement...</p>
+</section>
+
+<div class="split left">
+    <div class="centered">
+      <img src="cart.jgp">
+      <h2 href="MenuCartPage.html">Check out our menu!</h2>
+    </div>
+</div>
+  
+<div class="split right">
+    <div class="centered">
+      <img src="cart.jgp">
+      <h2>Don't miss out on our limited time offers!</h2>
+      <p>Some limited time content here.</p>
+    </div>
+</div>
+
 <main>
 </main>
 </div>
