--- a/main.html
+++ b/main.html
@@ -23,6 +23,15 @@ src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
 <li><a href="CheckoutPage.html">Checkout Page</a></li>
 </ul>
 </nav>
+
+<div class="banner-area">
+    <div class="banner-text">
+        <h1>Welcome to Luigi's Pizza</h1>
+        <p>...Some sample mission statement...</p>
+    </div>
+</div>
+
+
 <div id="wrapper">
 <main>
 </div>
